styles/globals.css
@import "tailwindcss/tailwind.css";
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: "RBYGSC", Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
    sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

img {
  max-width: 100%;
  height: auto;
}

h1,
h2,
p,
ul {
  margin: 0;
}

ul {
  padding: 0;
  list-style: none;
}

button {
  padding: 0.5rem 1rem;
  font-weight: bold;
}

/* Header */

.header {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #fff;
  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
  z-index: 3;
}

.header ~ nav > ul {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow: hidden;
  background-color: #fff;
}

.header ~ nav > ul > li a {
  display: block;
  padding: 20px 20px;
  text-decoration: none;
}

.menu > li {
  position: relative;
  display: flex;
  align-items: center;
}

.menu > li:hover > i {
  pointer-events: none;
  position: absolute;
  width: 0;
  height: 0;
  border: 10px solid transparent;
  border-left-color: black;
  float: right;
}

/* menu */

.header ~ nav > .menu {
  max-height: 0;
  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
  transition: max-height 0.2s ease-out;
}

/* menu icon */

.menu-icon {
  cursor: pointer;
  float: right;
  padding: 28px 20px;
  position: absolute;
  top: 10px;
  right: 0;
  user-select: none;
}

.menu-icon .navicon {
  background: #333;
  display: block;
  height: 2px;
  position: relative;
  transition: background 0.2s ease-out;
  width: 18px;
}

.menu-icon .navicon:before,
.menu-icon .navicon:after {
  background: #333;
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  transition: all 0.2s ease-out;
  width: 100%;
}

.menu-icon .navicon:before {
  top: 5px;
}

.menu-icon .navicon:after {
  top: -5px;
}

/* menu btn */

.menu-btn {
  display: none;
}

.menu-btn:checked ~ nav > .menu {
  max-height: 300px;
}

.menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

.menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

.menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

/* Pages */
main {
  padding: 1rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.autocomplete > i.dialogue-box-arrow {
  right: 10px;
  top: 18px;
  pointer-events: revert;
}
.autocomplete > i.dialogue-box-arrow:hover {
  cursor: pointer;
}
.autocomplete > i.dialogue-box-arrow.up {
  border-top-color: #fff;
  border-bottom-color: black;
  top: 10px;
}

.dialogue-box-arrow {
  pointer-events: none;
  position: absolute;
  width: 0;
  height: 0;
  border: 8px solid transparent;
  border-top-color: black;
  float: right;
}

.autocomplete-li-option {
  background-color: #fff;
  border-left: 2px solid silver;
  border-right: 2px solid silver;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1);
}
.autocomplete-li-option:last-child {
  border-bottom: 2px solid silver;
}
.autocomplete-li-option:hover,
.autocomplete-li-option.active {
  background-color: #5b8098;
  color: #fff;
  cursor: pointer;
}

.rby-dialogue-box {
  width: 100%;
  border-radius: 2px;
  padding: 10px;
  background: white;
  border: 1px solid white;
  box-shadow: 0 1px 0 1px black, inset 0 1px 0 1px black, 0 0 0 1px black,
    inset 0 0 0 1px black;
}

.rby-dialogue-box:focus {
  outline: 20px;
}

.pokeball-box {
  position: relative;
  border: 5px double #000;
  padding: 10px;
}

.pokeball {
  height: 12px;
  border: 2px solid #000;
  border-radius: 50%;
  background-color: #fafafa;
}

.pokeball,
.pokeball-upper {
  position: absolute;
  width: 12px;
}

.pokeball-upper {
  left: -2px;
  bottom: 4px;
  height: 6px;
  border-radius: 8px 8px 0 0;
  background-color: #000;
}

.top-left {
  top: -8px;
  left: -8px;
}
.top-right {
  top: -8px;
  right: -8px;
}
.bottom-left {
  bottom: -8px;
  left: -8px;
}
.bottom-right {
  bottom: -8px;
  right: -8px;
}

.dotted-border {
  border: 1px solid #000;
}

/* Hides the <select> down arrow */
.hide-select-arrow {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.background-color-fairy {
  background-color: #f7b5f7;
}

/* 48em = 768px */
@media (min-width: 48em) {
  .header ~ nav li {
    float: left;
  }
  .header ~ nav li a {
    padding: 20px 30px;
  }
  .header ~ nav > .menu {
    position: absolute;
    top: 0.3em;
    right: 0;
    box-shadow: unset;
    float: right;
    max-height: none;
  }
  .header ~ .menu-icon {
    display: none;
  }
  .rby-dialogue-box {
    min-width: 340px;
  }
  main {
    padding: 5rem 0;
  }
}

